# data-platform-boilerplate-docker

./: README.md  pyproject.toml
apps/domain/server/: Dockerfile  pyproject.toml
libs/greeter/: pyproject.toml
